--- a/app/app.css
+++ b/app/app.css
@@ -68,6 +68,21 @@ input::-webkit-input-placeholder {
 
 }
 
+#mainProfile{
+    background-color: #fff;
+    /* shadows and rounded borders */
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    /*border-radius: 2px;*/
+    height: 100%;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);   
+    margin-top: 30px;
+    margin: 0 auto;
+    max-width: 330px;
+    padding: 40px 40px; 
+}
 .main-center{
     margin-top: 30px;
     margin: 0 auto;
