--- a/app/app.css
+++ b/app/app.css
@@ -208,3 +208,25 @@ input::-webkit-input-placeholder {
   font-size:14px;
   font-weight:bold;
 }
+.panel-body:not(.two-col) { 
+    padding:0px 
+}
+.glyphicon {
+ margin-right:5px;
+ }
+.glyphicon-new-window {
+ margin-left:5px; 
+}
+.panel-body .radio,.panel-body .checkbox {
+    margin-top: 0px;margin-bottom: 0px;
+}
+.panel-body .list-group {
+    margin-bottom: 0;
+}
+
+.margin-bottom-none { 
+    margin-bottom: 0;
+ }
+.panel-body .radio label,.panel-body .checkbox label { 
+    display:block;
+ }
